--- a/front/src/app/globals.css
+++ b/front/src/app/globals.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .menu-header {
-    @apply fixed top-0 left-0 w-full h-16 flex items-center bg-opacity-20 bg-black text-white z-50;
+    @apply fixed top-0 left-0 w-full h-16 flex items-center bg-opacity-80 bg-white z-50;
   }
 }
